# siafudb

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .prettierignore  .prettierrc  .yamllint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-rust.yml  dependency-review.yml  lint.yml  pr-title-lint.yml  sbom.yml  stale.yml
crates/siafudb/: Cargo.toml
crates/siafudb-access/: Cargo.toml
crates/siafudb-access/src/: lib.rs
crates/siafudb-access/src/document/: mod.rs
crates/siafudb-access/src/kv/: mod.rs
crates/siafudb-access/src/timeseries/: mod.rs
crates/siafudb-core/: Cargo.toml
crates/siafudb-core/src/: changelog.rs  error.rs  lib.rs
crates/siafudb-core/src/engine/: config.rs  database.rs
crates/siafudb-core/src/fragment/: mod.rs  types.rs
crates/siafudb-core/src/identity/: mod.rs
crates/siafudb-core/tests/: changelog_smoke.rs  engine_smoke.rs
crates/siafudb-server/: Cargo.toml
crates/siafudb-server/src/: lib.rs
crates/siafudb-sync/: Cargo.toml
crates/siafudb-sync/src/: in_process.rs  lib.rs
crates/siafudb-sync/src/adapters/: gspa.rs  gspi.rs  gspn.rs  mod.rs
crates/siafudb-sync/src/conflict/: mod.rs  strategy.rs
crates/siafudb-sync/src/discovery/: announcement.rs  local.rs  mod.rs
crates/siafudb-sync/src/protocol/: changelog.rs  channel.rs  mod.rs  mutation.rs  transform.rs
crates/siafudb-sync/tests/: in_process_smoke.rs
crates/siafudb/src/: lib.rs
docs/: README.mdx  architecture.mdx  docs.json  introduction.mdx  package.json  why-siafudb.mdx
docs/api-reference/: database.mdx  overview.mdx  query.mdx  sync.mdx
docs/concepts/: authority.mdx  fragments.mdx  graph-model.mdx  mutations.mdx
docs/governance/: contributing.mdx  foundation.mdx  roadmap.mdx  siafudb-outreach.md
docs/guides/: first-query.mdx  first-sync.mdx  ntl-integration.mdx  quickstart.mdx
docs/research/: 01-architecture.mdx  02-graph-sync-protocol.mdx  03-decision-log.mdx  04-first-steps.mdx  graph-first-amendment-addendum.md  graph-first-amendment.md  overview.mdx  siafudb-manifesto.md  siafudb-path-forward.md  siafudb-repo-setup.md
docs/spec/: conflict-resolution.mdx  mutation-format.mdx  overview.mdx  transport-contract.mdx
docs/sync/: gspa.mdx  gspn.mdx  overview.mdx
