[package]
name = "siafudb-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph Sync Protocol — mutation tracking, conflict resolution, and transport adapters."

[dependencies]
siafudb-core = { path = "../siafudb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
