[package]
name = "siafudb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
siafudb-core = { path = "../siafudb-core" }
siafudb-sync = { path = "../siafudb-sync" }
siafudb-access = { path = "../siafudb-access" }
